--- a/index.html
+++ b/index.html
@@ -544,20 +544,7 @@ I have a thing for stars and galaxies.
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="row testimony">
-                    <div class="col-md-7 col-md-offset-4 col-xs-10 col-xs-offset-1">
-                        <div class="row content">
-                            <div class="col-sm-3">
-                                <center><img src="images/manu.jpg" class="img-circle img-responsive" /></center>
-                            </div>
-                            <div class="col-sm-9">
-                                <p>
-                                    A simple reason why I appreciate and adore Anusha Gaargya is that she has an answer for the question, "What are you exceptionally good at ?" which gives a meaning for your life.  There is a saying that you must be an artist to know who you really are because even if you hide your art you would have surely signed and signature cannot be an alias! This girl is truely an inspiration to learn how to explore self. Almost every demanded sketches are drawn by her and they are simply perfect. I wish her good luck for all her endeavors too.<br /><br />-Samarth Deyagond, Web developer.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="row testimony">
                     <div class="col-md-7 col-xs-10 col-xs-offset-1">
                         <div class="row content">
@@ -567,6 +554,20 @@ I have a thing for stars and galaxies.
                             <div class="col-sm-9">
                                 <p>
                                     Anu is an engineer by profession but an artist at heart. Few things are more joyous and liberating in life than discovering a channel for self-expression, and to cultivate and cherish that channel once found. Anu realized early in life that her channel was going to be art – painting and sketching, to be specific. From her first baby steps in this art form many moons ago to this day, she has been honing her craft sketch by sketch, continuing her quest to view the world through the mind’s eye and to communicate it through art. Her sketches and paintings clearly indicate that her ability as an artist has grown by leaps and bounds over the years, which is a testament to her perseverance and her passion to seek the truth and the essence of her unique existence through her craft. There is little doubt that great things await her in this journey of hers in the coming years. In the maddeningly competitive world of today, it is important to be the very best at what you do to thrive – be it art, music, or science. But in life, it is more important to be a good human being; anybody who knows Anu or has crossed paths with her will attest to the fact that she is a wonderful human being – compassionate, kind, humble, down to earth, and full of life – qualities that make her a friend that anyone would treasure. Here’s wishing her the very best in life!<br /><br />-Manu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row testimony">
+                    <div class="col-md-7 col-md-offset-4 col-xs-10 col-xs-offset-1">
+                        <div class="row content">
+                            <div class="col-sm-3">
+                                <center><img src="images/profile.jpg" class="img-circle img-responsive" /></center>
+                            </div>
+                            <div class="col-sm-9">
+                                <p>
+                                    A simple reason why I appreciate and adore Anusha Gaargya is that she has an answer for the question, "What are you exceptionally good at ?" which gives a meaning for your life.  There is a saying that you must be an artist to know who you really are because even if you hide your art you would have surely signed and signature cannot be an alias! This girl is truely an inspiration to learn how to explore self. Almost every demanded sketches are drawn by her and they are simply perfect. I wish her good luck for all her endeavors too.<br /><br />-Samarth Deyagond, Web developer.
                                 </p>
                             </div>
                         </div>
