--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ I have a thing for stars and galaxies.
                     <div class="col-md-7 col-xs-10 col-xs-offset-1">
                         <div class="row content">
                             <div class="col-sm-3">
-                                <center><img src="images/profile.jpg" class="img-circle img-responsive" /></center>
+                                <center><img src="images/manu.jpg" class="img-circle img-responsive" /></center>
                             </div>
                             <div class="col-sm-9">
                                 <p>
