--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@ I have a thing for stars and galaxies.
                                 <div class="col-md-4 col-sm-6">                                    
                                     <div class="row" id="image">
                                         <figure class="col-xs-10 col-xs-offset-1">
+                                            <center><img src="images/paintings/pic17.jpg" class="img-responsive" /></center>
+                                        </figure>
+                                        <div id="magnify" onclick="maximize(2,17)">
+                                            <h1 class="text-center"><span class="glyphicon glyphicon-search"></span></h1>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 col-sm-6">                                    
+                                    <div class="row" id="image">
+                                        <figure class="col-xs-10 col-xs-offset-1">
                                             <center><img src="images/paintings/pic16.jpg" class="img-responsive" /></center>
                                         </figure>
                                         <div id="magnify" onclick="maximize(2,16)">
@@ -763,6 +773,10 @@ So, if 'art' is what you love, take a brush, start painting, without bothering m
                 if(i==16)
                 {
                     desc.innerHTML = "We should constantly get into deep conversations with ourselves in order to walk the farthest paths within ourselves";
+                }
+                if(i==17)
+                {
+                    desc.innerHTML = "How can two entities possessing intelligence and judgement be tied together for a lifetime!<br /> - Malgudi Days";
                 }
             }
 
