--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ I have a thing for stars and galaxies.
                                     </div>
                                 </div>
 
-                                <center><button class = "btn btn-primary" onclick = "showmore();" id = "showmore">Load More !</button></center>
+                                
 
                                 <div id = "extra" style = "transition:all ease-in-out 2s;">
                                     <div class="col-md-4 col-sm-6">
@@ -430,6 +430,11 @@ I have a thing for stars and galaxies.
                         
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col-md-12">
+                <center><button class = "btn btn-primary" onclick = "showmore();" id = "showmore">Load More !</button></center>
             </div>
         </div>
     </div>
