--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#other">Other Interests</a></li>
                     <li><a href="#contact">Follow</a></li>
                 </ul>
 
@@ -631,6 +632,26 @@ I have a thing for stars and galaxies.
             </div>
         </div>
     </div>
+
+
+    <div id="other">
+    	<div class="container">
+    		<div class="jumbotron text-center">
+    			<h2>Other Interests</h2>
+    		</div>
+    		<div class="row">
+    			<div class="col-md-6 col-md-offset-1">
+	    			<p>As said earlier about me, I do have interest in classical music, keyboard and guitar. Here is one such moment where you see me playing my passion, singing out my happiness and fetching in peace! Thanks all for encouraging me!</p>
+	    		</div>
+    		</div>
+    		<div class="row">
+	    		<div class="col-md-6 col-md-offset-1">
+	    			<iframe width="100%" height="315" src="https://www.youtube.com/embed/DX2RakfTpRk" frameborder="0" allowfullscreen></iframe>
+	    		</div>
+    		</div>
+    	</div>
+    </div>
+
 
     <div id="contact">
         <div class="container-fluid" style="margin-bottom:1em;">
