--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ I have a thing for stars and galaxies.
     </div>
 
 
-    <div id="other"style="background-image: url('images/other.jpg');background-size:cover;background-attachment:fixed;background-position:center;">
+    <div id="other"style="background-image: url('images/other.jpg');background-size:cover;background-attachment:fixed;background-position:center;@media-screen and (max-width:768px){background-image:none;}">
     	<div class="container">
     		<div class="jumbotron text-center">
     			<h2>Other Interests</h2>
