--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="Scripts/jquery.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/SmoothScroll.min.js"></script>
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <meta name = "Description" content = "Anusha Gaargya is one awesome artist whose sketches,portraits and paintings will leave you dumb founded. Apart from being artist, she plays piano too and is an engineering graduate from SJCE,Mysore. This website is her personal blog for showcasing her art works." />
     <meta name = "keywords" content = "Anusha Gaargya, Gaargya, Anusha, Anusha S, Anusha S Gaargya, Anusha Gaargya blog, Anusha Gaargya personalized blog, Anusha Gaargya customized blog, Anusha Gaargya customized website,Anusha Gaargya online gallery, Anusha Gaargya gallery" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1,target-densitydpi=device-dpi" />
@@ -718,38 +719,56 @@ So, if 'art' is what you love, take a brush, start painting, without bothering m
                 if(i == 1)
                 {
                     desc.innerHTML = " \"People see, they dont observe. The distinction is clear ! \" <br /><br /> <b>Benedict Cumberbatch</b> in Sherlock Holmes.";
+
+                    responsiveVoice.speak('People see, they don\'t observe. The distinction is clear. Says Benedict Cumberbatch in Sherlock Holmes');
                 }
                 if(i == 2)
                 {
-                    desc.innerHTML = "<b>Walter White</b> from Breaking bad."
+                    desc.innerHTML = "<b>Walter White</b> from Breaking bad.";
+
+                    responsiveVoice.speak('Walter White from Breaking Bad!');
                 }
                 if(i == 3)
                 {
                     desc.innerHTML = "\"When my dragons are grown, we will take back what was stolen from me and destroy those who wronged me! We will lay waste to armies and burn cities to the ground!\"<br />-<b>Daenerys Targaryen</b> in Game of Thrones";
+
+                    responsiveVoice.speak('When my dragons are grown, we will take back what was stolen from me and destroy those who wronged me! We will lay waste to armies and burn cities to the ground! - Daenerys Targaryen in Game of Thrones');
                 }
                 if(i == 4)
                 {
-                    desc.innerHTML = "\"I think any form of self-expression is half confidence, half sheer hard work and, maybe, a bit of talent thrown in.\" <br /> - <b>Kate Winslet</b>"
+                    desc.innerHTML = "\"I think any form of self-expression is half confidence, half sheer hard work and, maybe, a bit of talent thrown in.\" <br /> - <b>Kate Winslet</b>";
+                
+                	responsiveVoice.speak('I think any form of self-expression is half confidence, half sheer hard work and, maybe, a bit of talent thrown in - <b>Kate Winslet');
                 }
                 if(i == 5)
                 {
                     desc.innerHTML = "\"When there is growth, changes are automatic. If I fear change, how can there be growth ?\"";
+
+                    responsiveVoice.speak('When there is growth, changes are automatic. If I fear change, how can there be growth?');
                 }
                 if(i == 6)
                 {
-                    desc.innerHTML = "It's the sweat that measures your hardwork, not the success!"
+                    desc.innerHTML = "It's the sweat that measures your hardwork, not the success!";
+
+                    responsiveVoice.speak('It\'s the sweat that measures your hardwork, not the success');
                 }
                 if(i == 7)
                 {
-                    desc.innerHTML = "Mohit Kushalappa. A classmate of mine!"
+                    desc.innerHTML = "Mohit Kushalappa. A classmate of mine!";
+
+                    responsiveVoice.speak('It is Mohit!');
                 }
                 if(i == 8)
                 {
-                    desc.innerHTML = "Dream - A satisfied state of an unsatisfied mind!"
+                    desc.innerHTML = "Dream - A satisfied state of an unsatisfied mind!";
+
+                    responsiveVoice.speak('Dream - A satisfied state of an unsatisfied mind.');
                 }
                 if(i == 9)
                 {
                     desc.innerHTML = "Pencil sketch of the portrait photo taken by Sumukh Bharadwaj.Check out his gallery <a href = \"https://www.instagram.com/oftrailsandtales/\" target = \"_blank\">@oftrailsandtales</a> for more of his amazing photography and heartwarming travel stories.";
+
+                    responsiveVoice.speak('Pencil sketch of the portrait photo taken by Sumukh Bharadwaj.Check out his gallery of trails and tales for more of his amazing photography and heartwarming travel stories.');
                 }
 
             }
