--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
             });
         });
 
+        function welcome(){
+
+        	responsiveVoice.speak('Welcome to Anusha Gaargya\'s art gallery. Portraits and paintings will promise pleasure to your eyes,mind, heart and soul! Carry on with the tour and keep visitng! Thank you!');
+
+        }
+
     </script>
     
 </head>
-<body>
+<body onload="welcome();">
 
 <nav class="navbar navbar-default" role="navigation" style="position:fixed;width:100%;z-index:5;background-color:white">
         <div class="container-fluid">
