--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         function welcome(){
 
-        	responsiveVoice.speak('Welcome to Anusha Gaargya\'s art gallery. Portraits and paintings will promise pleasure to your eyes,mind, heart and soul! Carry on with the tour and keep visitng! Thank you!');
+        	responsiveVoice.speak('Welcome to Anusha Gaargya\'s art gallery. Portraits and paintings will promise pleasure to your eyes,mind, heart and soul! Carry on with the tour and keep visiting! Thank you!');
 
         }
 
