--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ So, if 'art' is what you love, take a brush, start painting, without bothering m
                     desc.innerHTML = "\"I think any form of self-expression is half confidence, half sheer hard work and, maybe, a bit of talent thrown in.\" <br /> - <b>Kate Winslet</b>";
                 
                 	try{
-                		responsiveVoice.speak('I think any form of self-expression is half confidence, half sheer hard work and, maybe, a bit of talent thrown in - <b>Kate Winslet');
+                		responsiveVoice.speak('I think any form of self-expression is half confidence, half sheer hard work and, maybe, a bit of talent thrown in - Kate Winslet');
                 	}catch(e){
 
                 	}
