--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         function welcome(){
 
 			try{
-				responsiveVoice.speak('Welcome to Anusha Gaargya\'s art gallery. Portraits and paintings will promise pleasure to your eyes, mind, heart and soul! Carry on with the tour and keep visiting! Thank you!');
+				responsiveVoice.speak('Welcome to Anusha Gaargya\'s art gallery.');
 			}catch(e){
 
 			}
