--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@ So, if 'art' is what you love, take a brush, start painting, without bothering m
                 }
                 if(i == 10)
                 {
-                    desc.innerHTML = "Love is an irresistable desire to be irresistably desired!";
+                    desc.innerHTML = "Love is an irresistible desire to be irresistibly desired!";
 
                     try{
                     	responsiveVoice.speak('Love is an irresistable desire to be irresistably desired!');
