--- a/index.html
+++ b/index.html
@@ -331,6 +331,16 @@ I have a thing for stars and galaxies.
                         </div>
                         <div class="tab-pane fade" id="FC2">
                             <div class="row">
+                           		<div class="col-md-4 col-sm-6">                                    
+                                    <div class="row" id="image">
+                                        <figure class="col-xs-10 col-xs-offset-1">
+                                            <center><img src="images/paintings/pic22.jpg" class="img-responsive" /></center>
+                                        </figure>
+                                        <div id="magnify" onclick="maximize(2,22)">
+                                            <h1 class="text-center"><span class="glyphicon glyphicon-search"></span></h1>
+                                        </div>
+                                    </div>
+	                            </div>
                             	<div class="col-md-4 col-sm-6">                                    
                                     <div class="row" id="image">
                                         <figure class="col-xs-10 col-xs-offset-1">
@@ -411,21 +421,22 @@ I have a thing for stars and galaxies.
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 col-sm-6">
-                                    <div class="row" id="image">
-                                        <figure class="col-xs-10 col-xs-offset-1">
-                                            <center><img src="images/paintings/pic2.jpg" class="img-responsive" /></center>
-                                        </figure>
-                                        <div id="magnify" onclick="maximize(2,2)">
-                                            <h1 class="text-center"><span class="glyphicon glyphicon-search"></span></h1>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                                                                                         
 
                                 <center><button class = "btn btn-primary" onclick = "showmore();" id = "showmore">Load More !</button></center>
 
                                 <div id = "extra" style = "transition:all ease-in-out 2s;">
+                                	<div class="col-md-4 col-sm-6">
+	                                    <div class="row" id="image">
+	                                        <figure class="col-xs-10 col-xs-offset-1">
+	                                            <center><img src="images/paintings/pic2.jpg" class="img-responsive" /></center>
+	                                        </figure>
+	                                        <div id="magnify" onclick="maximize(2,2)">
+	                                            <h1 class="text-center"><span class="glyphicon glyphicon-search"></span></h1>
+	                                        </div>
+	                                    </div>
+	                                </div>
                                 	<div class="col-md-4 col-sm-6">
 	                                    <div class="row" id="image">
 	                                        <figure class="col-xs-10 col-xs-offset-1">
@@ -1014,6 +1025,10 @@ So, if 'art' is what you love, take a brush, start painting, without bothering m
                 if(i==21)
                 {
                     desc.innerHTML = "Doodling is meditative!";
+                }
+                if(i==22)
+                {
+                    desc.innerHTML = "You aren't just a person. You're a focal point where the Universe is becoming conscious of itself.";
                 }
             }
 
