--- a/index.html
+++ b/index.html
@@ -213,6 +213,16 @@ I have a thing for stars and galaxies.
                         <div class="active tab-pane fade in" id="FC1">
                             <div class="row text-center" style="margin:1em;font-family:lato;"><p>Tap to zoom!</p></div>  
                             <div class="row">
+				<div class="col-md-4 col-sm-6">
+                                    <div class="row" id="image">
+                                        <figure class="col-xs-10 col-xs-offset-1">
+                                            <center><img src="https://scontent-sin6-2.xx.fbcdn.net/v/t31.0-8/18238779_822605294553664_8425248831456158678_o.jpg?oh=06a0fd304165c7db49c4d8dd0cb2182a&oe=59BDCA11" class="img-responsive" /></center>
+                                        </figure>
+                                        <div id="magnify" onclick="maximize(1,12)">
+                                            <h1 class="text-center"><span class="glyphicon glyphicon-search"></span></h1>
+                                        </div>
+                                    </div>
+                                </div>
                             	<div class="col-md-4 col-sm-6">
                                     <div class="row" id="image">
                                         <figure class="col-xs-10 col-xs-offset-1">
@@ -964,6 +974,16 @@ So, if 'art' is what you love, take a brush, start painting, without bothering m
 
                     try{
                     	responsiveVoice.speak('When will you start living like a mendicant - having just a carry bag as possession, going from town to town, singing songs, forgetting about burdens, letting the joys and griefs not affect your mind? That day, you will be truly happy. ');
+                    }catch(e){
+
+                    }
+                }
+		if(i == 12)
+                {
+                    desc.innerHTML = "Drop the idea of becoming someone, because you are already a masterpiece. You cannot be improved. You have only to come to it, to know it, to realize it. -OSHO";
+
+                    try{
+                    	responsiveVoice.speak('Drop the idea of becoming someone, because you are already a masterpiece. You cannot be improved. You have only to come to it, to know it, to realize it. says, OSHO');
                     }catch(e){
 
                     }
