--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ I have a thing for stars and galaxies.
 				<div class="col-md-4 col-sm-6">
                                     <div class="row" id="image">
                                         <figure class="col-xs-10 col-xs-offset-1">
-                                            <center><img src="https://scontent-sin6-2.xx.fbcdn.net/v/t31.0-8/18238779_822605294553664_8425248831456158678_o.jpg?oh=06a0fd304165c7db49c4d8dd0cb2182a&oe=59BDCA11" class="img-responsive" /></center>
+                                            <center><img src="images/portraits/pic12.jpg" class="img-responsive" /></center>
                                         </figure>
                                         <div id="magnify" onclick="maximize(1,12)">
                                             <h1 class="text-center"><span class="glyphicon glyphicon-search"></span></h1>
