--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/SmoothScroll.min.js"></script>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout="image-side"
+     data-ad-layout-key="-fg+5m+7r-g6+16"
+     data-ad-client="ca-pub-5991513396683123"
+     data-ad-slot="5638740898"></ins>
+<script>
     <meta name = "Description" content = "Anusha Gaargya is one awesome artist whose sketches,portraits and paintings will leave you dumb founded. Apart from being artist, she plays piano too and is an engineering graduate from SJCE,Mysore. This website is her personal blog for showcasing her art works." />
     <meta name = "keywords" content = "Anusha Gaargya, Gaargya, Anusha, Anusha S, Anusha S Gaargya, Anusha Gaargya blog, Anusha Gaargya personalized blog, Anusha Gaargya customized blog, Anusha Gaargya customized website,Anusha Gaargya online gallery, Anusha Gaargya gallery" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1,target-densitydpi=device-dpi" />
